CHECKOUT: Add group for discount text and cart button
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/app/src/main/res/layout/layout_cart_item.xml
+++ b/app/src/main/res/layout/layout_cart_item.xml
@@ -92,12 +92,10 @@
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_4"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/text_view_order_price"
             app:layout_constraintStart_toEndOf="@id/text_view_order_price"
             app:layout_constraintTop_toTopOf="@id/text_view_order_price"
-            tools:text="@string/order_price_discount_label"
-            tools:visibility="visible" />
+            tools:text="@string/order_price_discount_label" />
 
         <TextView
             android:id="@+id/text_view_order_before_discount"
@@ -105,11 +103,17 @@
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_4"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/text_view_order_price"
             app:layout_constraintStart_toEndOf="@id/text_view_order_after_discount"
             app:layout_constraintTop_toTopOf="@id/text_view_order_price"
-            tools:text="@string/order_discount_label"
+            tools:text="@string/order_discount_label" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_discount_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="spin_button_number, button_delete_order, button_checkout_order"
             tools:visibility="visible" />
 
         <com.future.tailormade_dls.widget.SpinNumberButton
@@ -118,10 +122,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_12"
             android:layout_marginTop="@dimen/dp_12"
-            android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/image_view_order"
-            app:layout_constraintTop_toBottomOf="@id/text_view_order_price"
-            tools:visibility="visible" />
+            app:layout_constraintTop_toBottomOf="@id/text_view_order_price" />
 
         <ImageButton
             android:id="@+id/button_delete_order"
@@ -129,12 +131,10 @@
             android:layout_width="@dimen/dp_40"
             android:layout_height="@dimen/dp_40"
             android:src="@drawable/ic_delete"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/spin_button_number"
             app:layout_constraintStart_toEndOf="@id/spin_button_number"
             app:layout_constraintTop_toTopOf="@id/spin_button_number"
-            tools:ignore="ContentDescription"
-            tools:visibility="visible" />
+            tools:ignore="ContentDescription" />
 
         <Button
             android:id="@+id/button_checkout_order"
@@ -142,11 +142,17 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_16"
             android:text="@string/checkout_order_label"
-            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/button_delete_order"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_cart_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            app:constraint_referenced_ids="spin_button_number, button_delete_order, button_checkout_order"
             tools:visibility="visible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
