TAILOR_DASHBOARD: Setup contextual action mode
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -394,4 +394,10 @@
         <item name="navigationIcon">@drawable/ic_back</item>
         <item name="navigationIconColor">?attr/colorControlNormal</item>
     </style>
+
+    <style name="Theme.TailorMade.ActionMode" parent="Widget.AppCompat.ActionMode">
+        <item name="titleTextStyle">?attr/textAppearanceHeadline4</item>
+        <item name="subtitleTextStyle">?attr/textAppearanceSubtitle1</item>
+        <item name="background">?attr/backgroundColor</item>
+    </style>
 </resources>
