--- a/tailor-app/src/main/res/menu/menu_top_nav_main.xml
+++ b/tailor-app/src/main/res/menu/menu_top_nav_main.xml
@@ -2,8 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/item_search"
+        android:id="@+id/menu_search"
         android:icon="@drawable/ic_search"
         android:title="@string/search_label"
+        app:showAsAction="ifRoom" />
+
+    <!-- TODO: Add this after get the icon -->
+    <!--    android:icon="@drawable/ic_settings" -->
+    <item
+        android:id="@+id/menu_settings"
+        android:title="@string/order_menu_label"
         app:showAsAction="ifRoom" />
 </menu>
