TAILOR_ADD_EDIT_DESIGN: Add layout for add or edit design
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_design_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="?attr/colorSurface2"
     android:orientation="vertical"
-    tools:context=".feature.view.DesignDetailFragment">
+    tools:context=".feature.designDetail.view.DesignDetailFragment">
 
     <include
         android:id="@+id/layout_design_detail_general_info"
