--- a/features/tailormade_design_detail/src/main/res/layout/activity_design_detail.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/activity_design_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".feature.view.DesignDetailActivity">
+    tools:context=".feature.designDetail.view.DesignDetailActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_appbar_layout_design_detail"
