TAILOR_ADD_EDIT_DESIGN: Setup ui functionality for AddOrEditDesignFragment.kt
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/layout_add_or_edit_image.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/layout_add_or_edit_image.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/drawable_add_image_background"
+    android:clickable="true"
+    android:focusable="true"
     android:padding="@dimen/dp_16">
 
     <ImageView
