TAILOR_ADD_EDIT_DESIGN: Add settings for color picker
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
@@ -44,14 +44,62 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.skydoves.colorpickerview.ColorPickerView
-        android:id="@+id/color_picker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dp_16"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/view_color_picker"
+        android:layout_width="@dimen/dp_200"
+        android:layout_height="@dimen/dp_200"
+        android:layout_margin="@dimen/dp_32"
+        app:actionMode="always"
+        app:debounceDuration="300"
+        app:layout_constraintBottom_toTopOf="@id/slide_bar_color_picker_alpha"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/text_input_color_name" />
+
+    <com.skydoves.colorpickerview.sliders.AlphaSlideBar
+        android:id="@+id/slide_bar_color_picker_alpha"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_16"
+        android:layout_marginHorizontal="@dimen/dp_16"
+        android:layout_marginVertical="@dimen/dp_16"
+        app:borderColor_AlphaSlideBar="@color/color_black_20"
+        app:borderSize_AlphaSlideBar="4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_color_picker" />
+
+    <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
+        android:id="@+id/slide_bar_color_picker_brightness"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_16"
+        android:layout_marginHorizontal="@dimen/dp_16"
+        android:layout_marginVertical="@dimen/dp_16"
+        app:borderColor_BrightnessSlider="@color/color_black_20"
+        app:borderSize_BrightnessSlider="5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/slide_bar_color_picker_alpha" />
+
+    <View
+        android:id="@+id/view_color_preview"
+        android:layout_width="@dimen/dp_64"
+        android:layout_height="@dimen/dp_64"
+        android:layout_marginVertical="@dimen/dp_32"
+        app:layout_constraintEnd_toStartOf="@+id/text_view_color_preview"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/slide_bar_color_picker_brightness" />
+
+    <TextView
+        android:id="@+id/text_view_color_preview"
+        style="@style/TextAppearance.TailorMade.Body1.BlackHigh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/dp_16"
+        android:text="@string/size_chest_label"
+        app:layout_constraintBottom_toBottomOf="@id/view_color_preview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/view_color_preview"
+        app:layout_constraintTop_toTopOf="@id/view_color_preview" />
 
     <Button
         android:id="@+id/button_add_new_color"
@@ -59,8 +107,9 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_16"
         android:text="@string/add_size_label"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/color_picker" />
+        app:layout_constraintTop_toBottomOf="@id/view_color_preview" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
