--- a/tailor-app/src/main/res/layout/activity_main.xml
+++ b/tailor-app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_nav_main"
         style="@style/Theme.TailorMade.BottomNavigation"
+        android:layout_height="wrap_content"
         app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
