TAILOR_ADD_EDIT_DESIGN: Fix chip adding error and add validation in bottom sheet
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
+++ b/features/tailormade_design_detail/src/main/res/layout/fragment_add_color_bottom_sheet.xml
@@ -106,7 +106,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_16"
-        android:text="@string/add_size_label"
+        android:text="@string/add_color_label"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
