--- a/libraries/tailormade_dls/src/main/res/layout/layout_order_total.xml
+++ b/libraries/tailormade_dls/src/main/res/layout/layout_order_total.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:useDefaultMargins="true"
     android:columnCount="2"
-    android:rowCount="3">
+    android:rowCount="4">
 
     <TextView
         android:id="@+id/text_view_order_quantity_label"
@@ -52,5 +52,34 @@
         android:layout_column="1"
         android:layout_gravity="end"
         tools:text="@string/order_total_price_value_label" />
+
+    <TextView
+        android:id="@+id/text_view_order_total_status_label"
+        style="@style/TextAppearance.TailorMade.Caption.BlackMedium"
+        android:layout_row="3"
+        android:layout_column="0"
+        android:text="@string/order_total_status_label"
+        android:visibility="gone"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/text_view_order_total_status_rejected"
+        style="@style/TextAppearance.TailorMade.Caption.Red"
+        android:layout_row="3"
+        android:layout_column="1"
+        android:layout_gravity="end"
+        android:visibility="gone"
+        tools:text="@string/order_total_status_label"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/text_view_order_total_status_accepted"
+        style="@style/TextAppearance.TailorMade.Caption.Green"
+        android:layout_row="3"
+        android:layout_column="1"
+        android:layout_gravity="end"
+        android:visibility="gone"
+        tools:text="@string/order_total_status_label"
+        tools:visibility="visible" />
 
 </GridLayout>
