--- a/tailor-app/src/main/res/layout/fragment_incoming_order.xml
+++ b/tailor-app/src/main/res/layout/fragment_incoming_order.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".feature.order.view.IncomingOrderFragment">
 
     <androidx.recyclerview.widget.RecyclerView
