--- a/tailor-app/src/main/res/layout/fragment_order_list.xml
+++ b/tailor-app/src/main/res/layout/fragment_order_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,10 +11,7 @@
         android:id="@+id/tab_layout_orders"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="fixed"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:tabMode="fixed">
 
         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_item_incoming_orders"
@@ -33,30 +30,7 @@
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager_orders"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_0"
-        android:layout_margin="@dimen/dp_16"
-        app:layout_constraintTop_toBottomOf="@id/tab_layout_orders"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/dp_16" />
 
-    <androidx.constraintlayout.widget.Group
-        android:id="@+id/group_orders"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        app:constraint_referenced_ids="tab_layout_orders, view_pager_orders"
-        tools:visibility="visible" />
-
-    <include
-        android:id="@+id/layout_order_list_state"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/dp_16"
-        layout="@layout/layout_order_list_state"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
