--- a/tailor-app/src/main/res/layout/fragment_recent_order.xml
+++ b/tailor-app/src/main/res/layout/fragment_recent_order.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".feature.order.view.RecentOrderFragment">
 
     <com.google.android.material.chip.ChipGroup
@@ -13,9 +12,12 @@
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/dp_12"
         app:singleSelection="true"
-        app:selectionRequired="true">
+        app:selectionRequired="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <com.google.android.material.chip.Chip
+    <com.google.android.material.chip.Chip
             android:id="@+id/chip_filter_all_order"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,7 +40,22 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view_recent_order"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="@dimen/dp_0"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/chip_group_filter_order"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:visibility="visible" />
 
-</LinearLayout>
+    <include
+        android:id="@+id/layout_recent_order_state"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        layout="@layout/layout_order_list_state"
+        app:layout_constraintTop_toBottomOf="@id/chip_group_filter_order"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
