TAILOR_ORDERS: Added order detail layout
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/tailor-app/src/main/res/layout/layout_card_order.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order.xml
@@ -87,60 +87,34 @@
             tools:text="@string/order_price_label" />
 
         <TextView
-            android:id="@+id/text_view_order_price_discount"
+            android:id="@+id/text_view_order_price_after_discount"
             style="@style/TextAppearance.TailorMade.Body2.Primary.Bold"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_4"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/text_view_order_price"
             app:layout_constraintStart_toEndOf="@id/text_view_order_price"
             app:layout_constraintTop_toTopOf="@id/text_view_order_price"
-            tools:text="@string/order_price_discount_label"
-            tools:visibility="visible" />
+            tools:text="@string/order_price_discount_label" />
 
         <TextView
-            android:id="@+id/text_view_order_discount"
+            android:id="@+id/text_view_order_price_before_discount"
             style="@style/TextAppearance.TailorMade.Body2.BlackMedium2"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dp_4"
-            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/text_view_order_price"
-            app:layout_constraintStart_toEndOf="@id/text_view_order_price_discount"
+            app:layout_constraintStart_toEndOf="@id/text_view_order_price_after_discount"
             app:layout_constraintTop_toTopOf="@id/text_view_order_price"
-            tools:text="@string/order_discount_label"
-            tools:visibility="visible" />
+            tools:text="@string/order_discount_label" />
 
-        <com.future.tailormade_dls.widget.SpinNumberButton
-            android:id="@+id/spin_button_number"
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_discount_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_12"
-            app:layout_constraintStart_toEndOf="@id/image_view_order"
-            app:layout_constraintTop_toBottomOf="@id/text_view_order_price" />
+            android:visibility="gone"
+            app:constraint_referenced_ids="text_view_order_price_before_discount, text_view_order_price_after_discount"
+            tools:visibility="visible" />
 
-        <ImageButton
-            android:id="@+id/button_delete_order"
-            style="@style/Theme.TailorMade.CornerRounded.All"
-            android:layout_width="@dimen/dp_40"
-            android:layout_height="@dimen/dp_40"
-            android:src="@drawable/ic_delete"
-            app:layout_constraintBottom_toBottomOf="@id/spin_button_number"
-            app:layout_constraintStart_toEndOf="@id/spin_button_number"
-            app:layout_constraintTop_toTopOf="@id/spin_button_number"
-            tools:ignore="ContentDescription" />
-
-        <Button
-            android:id="@+id/button_checkout_order"
-            android:layout_width="@dimen/dp_0"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_24"
-            android:text="@string/checkout_order_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/button_delete_order" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
