--- a/tailor-app/src/main/res/layout/layout_card_order.xml
+++ b/tailor-app/src/main/res/layout/layout_card_order.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dp_16"
-    android:elevation="@dimen/dp_4">
+    android:clickable="true"
+    android:elevation="@dimen/dp_4"
+    android:focusable="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
