INTEGRATE_USER_APP: Fix ui functionality and options menu
Signed-off-by: syntialai <53588149+syntialai@users.noreply.github.com>

--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
     <!-- Bottom Navigation Style -->
     <style name="Theme.TailorMade.BottomNavigation" parent="Widget.Design.BottomNavigationView">
         <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/dp_56</item>
         <item name="android:minHeight">@dimen/dp_56</item>
         <item name="android:layout_margin">@dimen/dp_16</item>
         <item name="android:background">@drawable/drawable_bottom_nav_background</item>
